[package]
name = "eldiron-cli"
version = "0.0.6"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "Command-line tool for Eldiron"
edition = "2021"
homepage = "https://github.com/fralonra/eldiron-cli"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fralonra/eldiron-cli"
keywords = ["eldiron"]

[[bin]]
path = "src/bin/main.rs"
name = "eldiron"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
which = "4.4.0"
